--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -8,7 +8,7 @@
     \begin{itemize}
         \item このセクションでは, 最初に定理 1 と定理 2 の方法を, 合成ワークロードとケーススタディの両方で実験を行うことによって評価する
 \item 次に, マルチスレッドエグゼキューターとシングルスレッドエグゼキューターのリアルタイムパフォーマンスを比較する
-\item 特に, マルチスレッドのエグゼキューターによってスケジュールされたチェーンの応答時間は, シングルスレッドのエグゼキューターよりもさらに悪い可能性があることを示している．
+\item 特に, マルチスレッドのエグゼキューターによってスケジュールされたチェーンの応答時間は, シングルスレッドのエグゼキューターよりもさらに悪い可能性があることを示している
     \end{itemize}
 \end{frame}
 
@@ -26,7 +26,7 @@
 \item すべてのチェーンの合計使用率は, 正規化された使用率 $U_{n o r m}$ に $m$ を掛けて決定される $(0, m]$ の範囲で選択される
 \item 次に, システムの総使用率を各チェーンに分配する
 \item 特に, 各 $\mathcal{C}_{i}$ の $U_{i}$ は 1 以下である
-\item 同様の方法で, 各チェーンの使用率を個々のコールバックに分配し, 各コールバックの WCET は, その使用率に期間 $T_{i}$ (最も近い整数に丸められる) を掛けることによって導き出される．
+\item 同様の方法で, 各チェーンの使用率を個々のコールバックに分配し, 各コールバックの WCET は, その使用率に期間 $T_{i}$ (最も近い整数に丸められる) を掛けることによって導き出される
     \end{itemize}
 \end{frame}
 
@@ -37,22 +37,22 @@
 \item 相互コールバックグループのコールバックは, すべてのコールバックからランダムに選択され, 相互に排他的な各コールバックグループに分散される
 \item 残りのコールバックはすべて再入可能コールバックグループに割り当てられる
 \item (4) 各コールバックの優先度は, セット $\left\{1,2, \cdots, \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|\right\}$ からランダムに選択された一意の ID に従う
-\item 数値が小さいほど, 優先度が高くなる．
+\item 数値が小さいほど, 優先度が高くなる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 各構成 (各図の $\mathrm{x}$ 軸上の 1 点に対応) に対して, 500 のタスクシステムを生成する
-\item 次の方法のパフォーマンスを比較する．
+\item 次の方法のパフォーマンスを比較する
               \begin{itemize}
-                  \item  OUR-1: 定理 3 と定理 1 によって実行されるスケジュール可能性テスト．
+                  \item  OUR-1: 定理 3 と定理 1 によって実行されるスケジュール可能性テスト
 
-                  \item  OUR-2: 定理 3 と定理 2 によって実行されるスケジュール可能性テスト．
+                  \item  OUR-2: 定理 3 と定理 2 によって実行されるスケジュール可能性テスト
 
                   \item  SIMU: すべてのチェーンが最初のインスタンスを同時にリリースし, 各チェーンができるだけ早くインスタンスをリリースし, 各コールバックインスタンスが WCET に対して実行されると仮定した場合の, シミュレーションでの各チェーンの観測された最大応答時間
 \item シミュレーションは 5000 時間単位続きます
-\item SIMU の結果は, 実際の最悪の場合の応答時間の測定された下限に基づいていることに注意．
+\item SIMU の結果は, 実際の最悪の場合の応答時間の測定された下限に基づいていることに注意
 
               \end{itemize}
     \end{itemize}
@@ -70,7 +70,7 @@
 \item 図 6.(d) では, 異なる数の相互に排他的なコールバックグループを生成する
 \item 図 6.(e) では, 異なる $\alpha$ を使用してシステムを生成する
 \item 図 6.(f)
-\item システムは異なる数のスレッドで生成される．
+\item システムは異なる数のスレッドで生成される
     \end{itemize}
 \end{frame}
 
@@ -87,7 +87,7 @@
 \item より厳しい応答時間の境界を取得する (スペースの制限のため, ここではアルゴリズムを提示しないが, 直感を示す)
 \item また, より正確なテストを導出するために, より多くの制約を作成することもできる
 \item これは, 私たちの方法で簡単に拡張できる
-\item これらの改善については, 今後の作業で検討する．
+\item これらの改善については, 今後の作業で検討する
     \end{itemize}
 \end{frame}
 
@@ -100,15 +100,15 @@
         \item 次に, ケーススタディを使用して分析手法を評価する
 \item また, シングルスレッドエグゼキュータとマルチスレッドエグゼキュータでのパフォーマンスの違いを実証するための経験的評価も示す
 \item ケーススタディは, カーネル 5.4.0-113-generic を搭載した Ubuntu 20.04.4 LTS と Intel i5-7500 CPU を搭載した PC (マルチスレッドエグゼキューターを提供するために 2 つのコアが使用される) で実行される ROS 2 Foxy Fitzroy に展開される
-\item )．
+\item )
     \end{itemize}
 \end{frame}
 
 
 \begin{frame}{}
     \begin{itemize}
-        \item ケーススタディの簡単な説明を表 V に示す．2 つのスレッドを持つマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ 5 分間実行し, 平均ケース応答時間 (ACRT) と最悪を測定する
-\item 各チェーンの応答時間 (WCRT) (これは安全ではなく下限である)．
+        \item ケーススタディの簡単な説明を表 V に示す2 つのスレッドを持つマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ 5 分間実行し, 平均ケース応答時間 (ACRT) と最悪を測定する
+\item 各チェーンの応答時間 (WCRT) (これは安全ではなく下限である)
     \end{itemize}
 \end{frame}
 
@@ -127,8 +127,8 @@
 \begin{frame}{}
     \begin{itemize}
         \item 私たちが観察した興味深い問題は, マルチスレッドのエグゼキューターによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキューターよりもはるかに遅くなる可能性があることである
-\item 特に, すべてのコールバックが相互に排他的な同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる． 2 番目のケーススタディを使用して問題を示す
-\item すべてのコールバックは, 相互に排他的な同じグループに割り当てられる．
+\item 特に, すべてのコールバックが相互に排他的な同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
+\item すべてのコールバックは, 相互に排他的な同じグループに割り当てられる
     \end{itemize}
 \end{frame}
 
@@ -141,7 +141,7 @@
 \item このとき, 優先度の高いコールバックインスタンスが最初にスケジュールされる
 \item その結果, このコールバックインスタンスは再びブロックされ, wait\_set から削除される
 \item この状況が数回繰り返され, このコールバックインスタンスが他の優先度の高いコールバックインスタンスによって何度もブロックされる可能性がある
-\item 対照的に, シングルスレッドエグゼキュータでは, コールバックインスタンスは wait\_set から削除されないため, 同時に wait\_set に追加されていないコールバックインスタンスによってブロックされない．
+\item 対照的に, シングルスレッドエグゼキュータでは, コールバックインスタンスは wait\_set から削除されないため, 同時に wait\_set に追加されていないコールバックインスタンスによってブロックされない
     \end{itemize}
 \end{frame}
 
@@ -152,6 +152,6 @@
 \item 各チェーンのチェーンインスタンスは, 赤い矢印でマークされた時点で同時にリリースされる
 \item $c_{3,1}$ のインスタンスは, マルチスレッド executor の下で $\mathcal{C}_{1}$ と $\mathcal{C}_{2}$ のそれぞれから 2 つのインスタンスによって遅延されることが分かる
 \item ただし, $c_{3,1}$ のインスタンスは, シングルスレッドのエグゼキュータの下で, $\mathcal{C}_{1}$ および $\mathcal{C}_{2}$ のそれぞれから 1 つのインスタンスだけ遅延する
-\item この結果は, マルチスレッドエグゼキューター上にシステムを実装するとき, または複数のシングルスレッドエグゼキューターからのコールバックをマルチスレッドエグゼキューターにマージするときに, コールバックのコールバックグループの割り当てを慎重に検討する必要があることを示唆している．
+\item この結果は, マルチスレッドエグゼキューター上にシステムを実装するとき, または複数のシングルスレッドエグゼキューターからのコールバックをマルチスレッドエグゼキューターにマージするときに, コールバックのコールバックグループの割り当てを慎重に検討する必要があることを示唆している
     \end{itemize}
 \end{frame}
