--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -5,12 +5,12 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS (Robot Operating System) は, ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つであり, 急速に開発が進んでいる [4]
+        \item ROS (Robot Operating System) は, ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つであり, 急速に開発が進んでいる
         \item ROS の主な哲学は, ソフトウェアのモジュール性と構成可能性を促進することにより, ロボットソフトウェア開発の生産性を促進することである
-        \item ただし, ROS にはリアルタイム機能がないという大きな欠点もあり, 安全性が重要な環境での実装が制限される [5]
-        \item これに関連して, ROS 2 [6] は 2017 年にリリースされた第 2 世代の ROS であり, ROS から最も肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供することを目的としている
-        \item 例えば, ROS 2 は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとして DDS (Data Distribution Service) [7] を採用し, リアルタイムオペレーティングシステム上に展開できる
-        \item ROS 2 の新しいアーキテクチャは優れたプラットフォームを提供するが, それだけではハードリアルタイムロボットソフトウェアをサポートするには不十分である．
+        \item ただし, ROS にはリアルタイム機能がないという大きな欠点もあり, 安全性が重要な環境での実装が制限される
+        \item これに関連して, ROS 2 は 2017 年にリリースされた第 2 世代の ROS であり, ROS から最も肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供することを目的としている
+        \item 例えば, ROS 2 は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとして DDS (Data Distribution Service) を採用し, リアルタイムオペレーティングシステム上に展開できる
+        \item ROS 2 の新しいアーキテクチャは優れたプラットフォームを提供するが, それだけではハードリアルタイムロボットソフトウェアをサポートするには不十分である
     \end{itemize}
 \end{frame}
 
@@ -22,7 +22,7 @@
         \item ROS 2 には, ワークロードをシーケンシャルに実行するシングルスレッドエグゼキュータと, ワークロードの実行を複数のスレッドに分散するマルチスレッドエグゼキュータの 2 つの組み込みエグゼキュータがある
         \item 最近, いくつかの研究 [8]-[14] で, ROS 2 シングルスレッドエグゼキュータのリアルタイムパフォーマンスのモデリングと分析が研究されている
         \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要であることが判明した
-        \item これらの研究により, ROS 2 シングルスレッドエグゼキュータに展開されたシステムのリアルタイムパフォーマンスを保証することが可能になったが, ROS 2 マルチスレッドエグゼキュータのモデル化と分析の問題は未解決のままである．
+        \item これらの研究により, ROS 2 シングルスレッドエグゼキュータに展開されたシステムのリアルタイムパフォーマンスを保証することが可能になったが, ROS 2 マルチスレッドエグゼキュータのモデル化と分析の問題は未解決のままである
     \end{itemize}
 \end{frame}
 
@@ -32,6 +32,6 @@
         \item 本論文では, ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に関する最初の作業を行う
         \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, それらの応答時間分析手法を開発する
         \item さらに, さまざまなエグゼキューターでの応答時間に対するスケジューリング動作の影響を調査し, 設計で複数のシングルスレッドエグゼキューターから 1 つのマルチスレッドエグゼキューターにワークロードをマージするときに応答時間が長くなるリスクを特定する
-        \item ランダムに生成されたワークロードと現実的な ROS 2 プラットフォームでのケーススタディの両方を使用して実験を行い, 結果を評価して実証する．
+        \item ランダムに生成されたワークロードと現実的な ROS 2 プラットフォームでのケーススタディの両方を使用して実験を行い, 結果を評価して実証する
     \end{itemize}
 \end{frame}
