--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -10,7 +10,7 @@
 \item たとえば, [23] は, 透過的な CPU/GPU 調整メカニズムのリアルタイム拡張を提案した
 \item [14] は, 分散システムの ROS 2 のエンドツーエンドのレイテンシを研究した
 \item [9] ROS 2 の標準の rclcpp Executor を Callback-group-level Executor と呼ばれるリアルタイムの Executor に置き換え, その結果のパフォーマンスを調査した
-\item ただし, これらの研究はリアルタイム機能を向上させるだけで, 分析のリアルタイム性を保証するものではない．
+\item ただし, これらの研究はリアルタイム機能を向上させるだけで, 分析のリアルタイム性を保証するものではない
     \end{itemize}
 \end{frame}
 
@@ -30,6 +30,6 @@
 \item [30] 複数のプロセッサを横断するトリガチェーンのエンドツーエンドのレイテンシを最適化した
 \item マルチプロセッサ上のシーケンシャルリアルタイムタスクの従来のノンプリエンプティブスケジューリングについて, [31] は, EDF でスケジュールされた周期的タスクに対して, 十分ではあるが必須ではない多項式時間のスケジューリング可能性テスト条件を提案した
 \item [32] は, EDF の下で線形時間の複雑さを備えた新しい十分なテストを提案し, さらに, EDF と FP スケジューリングの疑似多項式の時間複雑さの改善されたテスト条件をそれぞれ提示した
-\item それにもかかわらず, これらのすべての作業は, ROS 2 エグゼキューターの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない．
+\item それにもかかわらず, これらのすべての作業は, ROS 2 エグゼキューターの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない
     \end{itemize}
 \end{frame}
