--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -51,7 +51,7 @@
     \fitimage{
         \begin{itemize}
             \item チェーンの各頂点は, コールバックを表す
-            \item 処理チェーンは, 特定のイベント (通常は, システムタイマによってアクティベーションされる時間イベント) によってトリガされ, 複数のエグゼキューターにまたがる
+            \item 処理チェーンは, 特定のイベント (通常は, システムタイマによってアクティベーションされる時間イベント) によってトリガされ, 複数のエグゼキュータにまたがる
         \end{itemize}
     }{figure/multi_threaded_executor.png}
 \end{frame}
@@ -60,8 +60,8 @@
     \full{
         \assume{
             \begin{itemize}
-                \item 本論文では単一のエグゼキューターのチェーンにバインドされた応答時間を計算することに注意を限定する
-                \item ただし，各エグゼキューターに対して導出された応答時間の境界を追加することにより, チェーンが複数のエグゼキューターにまたがる場合に拡張できる
+                \item 本論文では単一のエグゼキュータのチェーンにバインドされた応答時間を計算することに注意を限定する
+                \item ただし，各エグゼキュータに対して導出された応答時間の境界を追加することにより, チェーンが複数のエグゼキュータにまたがる場合に拡張できる
             \end{itemize}
         }
     }
