--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -7,8 +7,8 @@
 \begin{frame}{}
     \begin{itemize}
         \item このセクションでは, 最初に定理 1 と定理 2 の方法を, 合成ワークロードとケーススタディの両方で実験を行うことによって評価する
-\item 次に, マルチスレッドエグゼキューターとシングルスレッドエグゼキューターのリアルタイムパフォーマンスを比較する
-\item 特に, マルチスレッドのエグゼキューターによってスケジュールされたチェーンの応答時間は, シングルスレッドのエグゼキューターよりもさらに悪い可能性があることを示している
+\item 次に, マルチスレッドエグゼキュータとシングルスレッドエグゼキュータのリアルタイムパフォーマンスを比較する
+\item 特に, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間は, シングルスレッドのエグゼキュータよりもさらに悪い可能性があることを示している
     \end{itemize}
 \end{frame}
 
@@ -99,7 +99,7 @@
     \begin{itemize}
         \item 次に, ケーススタディを使用して分析手法を評価する
 \item また, シングルスレッドエグゼキュータとマルチスレッドエグゼキュータでのパフォーマンスの違いを実証するための経験的評価も示す
-\item ケーススタディは, カーネル 5.4.0-113-generic を搭載した Ubuntu 20.04.4 LTS と Intel i5-7500 CPU を搭載した PC (マルチスレッドエグゼキューターを提供するために 2 つのコアが使用される) で実行される ROS 2 Foxy Fitzroy に展開される
+\item ケーススタディは, カーネル 5.4.0-113-generic を搭載した Ubuntu 20.04.4 LTS と Intel i5-7500 CPU を搭載した PC (マルチスレッドエグゼキュータを提供するために 2 つのコアが使用される) で実行される ROS 2 Foxy Fitzroy に展開される
 \item )
     \end{itemize}
 \end{frame}
@@ -119,14 +119,14 @@
 \item すべてのコールバックは, 再入可能なコールバックグループにあると見なされる
 \item 定理 2 によって各チェーンの応答時間の限界を計算する (システムは定理 3 に従ってスケジュール可能である)
 \item 結果を表ＶＩに示す
-\item マルチスレッドエグゼキューターによってスケジュールされた各チェーンの応答時間は, シングルスレッドエグゼキューターよりもはるかに短いことが分かる
+\item マルチスレッドエグゼキュータによってスケジュールされた各チェーンの応答時間は, シングルスレッドエグゼキュータよりもはるかに短いことが分かる
 \item さらに, 私たちの方法は安全であり, 測定された下限から遠く離れていない.
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 私たちが観察した興味深い問題は, マルチスレッドのエグゼキューターによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキューターよりもはるかに遅くなる可能性があることである
+        \item 私たちが観察した興味深い問題は, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキュータよりもはるかに遅くなる可能性があることである
 \item 特に, すべてのコールバックが相互に排他的な同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
 \item すべてのコールバックは, 相互に排他的な同じグループに割り当てられる
     \end{itemize}
@@ -152,6 +152,6 @@
 \item 各チェーンのチェーンインスタンスは, 赤い矢印でマークされた時点で同時にリリースされる
 \item $c_{3,1}$ のインスタンスは, マルチスレッド executor の下で $\mathcal{C}_{1}$ と $\mathcal{C}_{2}$ のそれぞれから 2 つのインスタンスによって遅延されることが分かる
 \item ただし, $c_{3,1}$ のインスタンスは, シングルスレッドのエグゼキュータの下で, $\mathcal{C}_{1}$ および $\mathcal{C}_{2}$ のそれぞれから 1 つのインスタンスだけ遅延する
-\item この結果は, マルチスレッドエグゼキューター上にシステムを実装するとき, または複数のシングルスレッドエグゼキューターからのコールバックをマルチスレッドエグゼキューターにマージするときに, コールバックのコールバックグループの割り当てを慎重に検討する必要があることを示唆している
+\item この結果は, マルチスレッドエグゼキュータ上にシステムを実装するとき, または複数のシングルスレッドエグゼキュータからのコールバックをマルチスレッドエグゼキュータにマージするときに, コールバックのコールバックグループの割り当てを慎重に検討する必要があることを示唆している
     \end{itemize}
 \end{frame}
