--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -30,6 +30,6 @@
 \item [30] 複数のプロセッサを横断するトリガチェーンのエンドツーエンドのレイテンシを最適化した
 \item マルチプロセッサ上のシーケンシャルリアルタイムタスクの従来のノンプリエンプティブスケジューリングについて, [31] は, EDF でスケジュールされた周期的タスクに対して, 十分ではあるが必須ではない多項式時間のスケジューリング可能性テスト条件を提案した
 \item [32] は, EDF の下で線形時間の複雑さを備えた新しい十分なテストを提案し, さらに, EDF と FP スケジューリングの疑似多項式の時間複雑さの改善されたテスト条件をそれぞれ提示した
-\item それにもかかわらず, これらのすべての作業は, ROS 2 エグゼキューターの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない
+\item それにもかかわらず, これらのすべての作業は, ROS 2 エグゼキュータの特定のスケジューリング機能を捉えることができないため, 直接適用することはできない
     \end{itemize}
 \end{frame}
