--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -16,15 +16,22 @@
     \begin{itemize}
         \item ROS 2 は 2017 年にリリースされた第 2 世代の ROS であり, ROS から最も肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供することを目的としている
         \item 例えば, ROS 2 は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとして DDS (Data Distribution Service) を採用し, リアルタイムオペレーティングシステム上に展開できる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{ハードリアルタイム制約}
+    \begin{itemize}
         \item ROS 2 の新しいアーキテクチャは優れたプラットフォームを提供するが, それだけではハードリアルタイムロボットソフトウェアをサポートするには不十分である
+        \item セーフクリティカルドメインのロボットソフトウェアはハードリアルタイム制約があるため, 設計者はそのタイミング動作を正式にモデル化および分析して, リアルタイム制約を実行時に常に保証する必要がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{エグゼキュータ}
     \begin{itemize}
-        \item セーフクリティカルドメインのロボットソフトウェアはハードリアルタイム制約があるため, 設計者はそのタイミング動作を正式にモデル化および分析して, リアルタイム制約を実行時に常に保証する必要がある
+
         \item ROS 2 のリアルタイムパフォーマンスに関連するコアコンポーネントはエグゼキュータである
         \item エグゼキュータは, プラットフォームとなる OS のスレッドでワークロードの実行を調整する
+        \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要である
 
     \end{itemize}
 \end{frame}
@@ -32,8 +39,9 @@
 \begin{frame}{シングル/マルチスレッドエグゼキュータ}
     \begin{itemize}
         \item ROS 2 には, ワークロードをシーケンシャルに実行するシングルスレッドエグゼキュータと, ワークロードの実行を複数のスレッドに分散するマルチスレッドエグゼキュータの 2 つの組み込みエグゼキュータがある
+
         \item 最近のいくつかの研究で, シングルスレッドエグゼキュータのリアルタイムパフォーマンスのモデリングと分析が研究されている
-        \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要である
+
         \item これらの研究により, シングルスレッドエグゼキュータに展開されたシステムのリアルタイムパフォーマンスを保証することが可能になったが, マルチスレッドエグゼキュータのモデル化と分析の問題は未解決のままである
     \end{itemize}
 \end{frame}
