--- a/setting.tex
+++ b/setting.tex
@@ -69,7 +69,8 @@
 % -- progress bar --
 \definecolor{lightgray}{rgb}{0.83, 0.83, 0.83}
 \setbeamercolor{progress bar}{bg=lightgray, fg=coolblack}
-\setbeamersize{text margin left=15pt, text margin right=15pt}
+% -- text margin --
+\setbeamersize{text margin left=15pt, text margin right=25pt}
 % -- equation font --
 \usefonttheme{professionalfonts}
 % -- block style --
